# awx-hashi-vault

./: README.md  pyproject.toml
ansible/: debug.yml  demo.yml  inventory.yml  ping.yml  prep-awx.yml  prep-infra.yml  prep-vault.yml  site.yml
ansible/collections/: requirements.yml
ansible/roles/demo/tasks/: main.yml
ansible/roles/prep-awx/defaults/: main.yml
ansible/roles/prep-awx/handlers/: main.yml
ansible/roles/prep-awx/tasks/: custom_credential.yml  machine_credential.yml  main.yml
ansible/roles/prep-awx/tests/: test.yml
ansible/roles/prep-awx/vars/: main.yml
ansible/roles/prep-infra/defaults/: main.yml
ansible/roles/prep-infra/handlers/: main.yml
ansible/roles/prep-infra/tasks/: main.yml
ansible/roles/prep-infra/tests/: test.yml
ansible/roles/prep-infra/vars/: main.yml
ansible/roles/prep-vault/defaults/: main.yml
ansible/roles/prep-vault/files/: acl_awx.sh  role_awx.sh  role_id.sh  secret_id.sh
ansible/roles/prep-vault/handlers/: main.yml
ansible/roles/prep-vault/tasks/: main.yml
ansible/roles/prep-vault/tests/: test.yml
ansible/roles/prep-vault/vars/: main.yml
