[tool.poetry]
name = "awx-hashi-vault"
version = "0.1.0"
description = ""
authors = ["Mark Mercado <mamercad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
